--- a/view/adminhtml/layout/logistic_log_index.xml
+++ b/view/adminhtml/layout/logistic_log_index.xml
@@ -1,4 +1,5 @@
-<?php
+<?xml version="1.0"?>
+<!--
 /**
  * 2011-2017 PH2M
  *
@@ -13,16 +14,11 @@
  * @copyright 2001-2017 PH2M
  * @license http://www.opensource.org/licenses/OSL-3.0 Open Software License (OSL 3.0)
  */
-namespace PH2M\Logistic\Model\Import;
-
-/**
- * Class Product
- * @package PH2M\Logistic\Model\Import
- */
-class Product extends AbstractImport
-{
-    /**
-     * @var string
-     */
-    protected $code = 'product';
-}
+ -->
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <body>
+        <referenceContainer name="content">
+            <uiComponent name="logistic_log_listing"/>
+        </referenceContainer>
+    </body>
+</page>
