--- a/view/adminhtml/layout/logistic_log_index.xml
+++ b/view/adminhtml/layout/logistic_log_index.xml
@@ -8,7 +8,7 @@
  * This source file is subject to the Open Software License (OSL 3.0) that is available
  * through the world-wide-web at this URL: http://www.opensource.org/licenses/OSL-3.0
  * If you are unable to obtain it through the world-wide-web, please send an email
- * to agence@reflet-digital.com so we can send you a copy immediately.
+ * to contact@ph2m.com so we can send you a copy immediately.
  *
  * @author PH2M - contact@ph2m.com
  * @copyright 2001-2017 PH2M
